--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,7 @@
 
       <!-- NAVIGATION MOBIL -->
       <section tabindex="0" class="navigation_mobil">
-        <a class="logo_mobil" href="">
+        <a class="logo_mobil" href="index.html">
           <img
             class="logo_kort"
             id="sort"
@@ -1012,7 +1012,7 @@
                 <a tabindex="0" href="#">Kontakt os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a tabindex="0" href="#">Sitemap</a>
+                <a tabindex="0" href="sitemap.html">Sitemap</a>
               </div>
             </div>
           </section>
