--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -143,11 +143,11 @@
     <div
       class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
     >
-      <p>Køb dine blomster i vores butikker</p>
-      <p>Bestil dit abonnement på vores webshop</p>
+      <p tabindex="0">Køb dine blomster i vores butikker</p>
+      <p tabindex="0">Bestil dit abonnement på vores webshop</p>
     </div>
     <!-- LOGO DESKTOP -->
-    <section>
+    <section tabindex="0">
       <a class="navigation_desktop" href="index.html">
         <img
           class="logo_lang"
@@ -183,8 +183,8 @@
     </section>
 
     <!-- NAVIGATION MOBIL -->
-    <section class="navigation_mobil">
-      <a class="logo_mobil" href="">
+    <section tabindex="0" class="navigation_mobil">
+      <a class="logo_mobil" href="index.html">
         <img
           class="logo_kort"
           id="sort"
@@ -226,15 +226,19 @@
       <ul>
         <li>
           <a
+            tabindex="0"
             href="abonnement.html"
             class="mt-8 font-other-headings text-h3-mobile lg:text-h5-desktop"
             >Abonnement</a
           >
         </li>
         <div class="dropdown">
-          <label tabindex="0">
+          <label>
             <button class="flex">
-              <p class="font-other-headings text-h3-mobile lg:text-h5-desktop">
+              <p
+                tabindex="0"
+                class="font-other-headings text-h3-mobile lg:text-h5-desktop"
+              >
                 Sortiment
               </p>
               <svg class="pb-2" width="40" height="40" viewBox="0 0 24 24">
@@ -266,6 +270,7 @@
         </div>
         <li>
           <a
+            tabindex="0"
             href="#"
             class="font-other-headings text-h3-mobile lg:text-h5-desktop"
             >Begivenheder</a
@@ -273,6 +278,7 @@
         </li>
         <li>
           <a
+            tabindex="0"
             href="#"
             class="font-other-headings text-h3-mobile lg:text-h5-desktop"
             >Kontakt os</a
@@ -282,7 +288,7 @@
 
       <ul class="secondary_nav">
         <li>
-          <a href="logind.html">
+          <a tabindex="0" href="logind.html">
             <img
               class="person h-8 w-8"
               src="img/ikoner/person.svg"
@@ -291,7 +297,7 @@
           </a>
         </li>
         <li>
-          <a href="kurv.html">
+          <a tabindex="0" href="kurv.html">
             <img
               class="shopping h-8 w-8"
               src="img/ikoner/shopping_bag.svg"
@@ -300,7 +306,12 @@
           </a>
         </li>
         <li>
-          <img class="search h-8 w-8" src="img/ikoner/search.svg" alt="Søg" />
+          <img
+            tabindex="0"
+            class="search h-8 w-8"
+            src="img/ikoner/search.svg"
+            alt="Søg"
+          />
         </li>
       </ul>
     </nav>
