--- a/src/blomster.html
+++ b/src/blomster.html
@@ -118,11 +118,11 @@
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
-        <p>Køb dine blomster i vores butikker</p>
-        <p>Bestil dit abonnement på vores webshop</p>
+        <p tabindex="0">Køb dine blomster i vores butikker</p>
+        <p tabindex="0">Bestil dit abonnement på vores webshop</p>
       </div>
       <!-- LOGO DESKTOP -->
-      <section>
+      <section tabindex="0">
         <a class="navigation_desktop" href="index.html">
           <img
             class="logo_lang"
@@ -158,8 +158,8 @@
       </section>
 
       <!-- NAVIGATION MOBIL -->
-      <section class="navigation_mobil">
-        <a class="logo_mobil" href="">
+      <section tabindex="0" class="navigation_mobil">
+        <a class="logo_mobil" href="index.html">
           <img
             class="logo_kort"
             id="sort"
@@ -201,15 +201,17 @@
         <ul>
           <li>
             <a
+              tabindex="0"
               href="abonnement.html"
               class="mt-8 font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Abonnement</a
             >
           </li>
           <div class="dropdown">
-            <label tabindex="0">
+            <label>
               <button class="flex">
                 <p
+                  tabindex="0"
                   class="font-other-headings text-h3-mobile lg:text-h5-desktop"
                 >
                   Sortiment
@@ -243,6 +245,7 @@
           </div>
           <li>
             <a
+              tabindex="0"
               href="#"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Begivenheder</a
@@ -250,6 +253,7 @@
           </li>
           <li>
             <a
+              tabindex="0"
               href="#"
               class="font-other-headings text-h3-mobile lg:text-h5-desktop"
               >Kontakt os</a
@@ -259,7 +263,7 @@
 
         <ul class="secondary_nav">
           <li>
-            <a href="logind.html">
+            <a tabindex="0" href="logind.html">
               <img
                 class="person h-8 w-8"
                 src="img/ikoner/person.svg"
@@ -268,7 +272,7 @@
             </a>
           </li>
           <li>
-            <a href="kurv.html">
+            <a tabindex="0" href="kurv.html">
               <img
                 class="shopping h-8 w-8"
                 src="img/ikoner/shopping_bag.svg"
@@ -277,7 +281,12 @@
             </a>
           </li>
           <li>
-            <img class="search h-8 w-8" src="img/ikoner/search.svg" alt="Søg" />
+            <img
+              tabindex="0"
+              class="search h-8 w-8"
+              src="img/ikoner/search.svg"
+              alt="Søg"
+            />
           </li>
         </ul>
       </nav>
@@ -648,6 +657,7 @@
 
     <!--------------------------------------------------------------------- FOOTER -->
     <footer
+      tabindex="0"
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
     >
       <article
@@ -657,10 +667,12 @@
           <section
             class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h4 class="text-h4-mobile lg:text-h4-desktop">BUTIKKER</h4>
+            <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
+              BUTIKKER
+            </h4>
 
             <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
-              <div class="strandvejen">
+              <div tabindex="0" class="strandvejen">
                 <p>Strandvejen 167</p>
                 <p>2900 Hellerup</p>
                 <p>Danmark</p>
@@ -670,14 +682,14 @@
                 </p>
               </div>
 
-              <div class="gunnar">
+              <div tabindex="0" class="gunnar">
                 <p>Gunnar Nu Hansens Pl. 6</p>
                 <p>2100 København Ø</p>
                 <p>Danmark</p>
                 <p><a href="tel:+4536260700"></a>Tlf.: +45 36 26 07 00</p>
               </div>
 
-              <div class="vaernedamsvej">
+              <div tabindex="0" class="vaernedamsvej">
                 <p>Værnedamsvej 4A st.</p>
                 <p>1619 København V</p>
                 <p>Danmark</p>
@@ -690,19 +702,20 @@
             class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
           >
             <h4
+              tabindex="0"
               class="text-h4-mobile lg:pb-l-spacing-desktop lg:text-h4-desktop"
             >
               INFORMATIONER
             </h4>
             <div class="mx-auto">
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a href="#">Om os</a>
+                <a tabindex="0" href="#">Om os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a href="#">Kontakt os</a>
+                <a tabindex="0" href="#">Kontakt os</a>
               </div>
               <div class="text-start underline lg:pb-l-spacing-desktop">
-                <a href="#">Sitemap</a>
+                <a tabindex="0" href="sitemap.html">Sitemap</a>
               </div>
             </div>
           </section>
@@ -710,29 +723,31 @@
           <section
             class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
           >
-            <h4 class="text-h4-mobile lg:text-h4-desktop">ÅBNINGSTIDER</h4>
+            <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
+              ÅBNINGSTIDER
+            </h4>
             <div class="tider grid grid-cols-2">
               <div
                 class="dage grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
               >
-                <p>Mandag</p>
-                <p>Tirsdag</p>
-                <p>Onsdag</p>
-                <p>Torsdag</p>
-                <p>Fredag</p>
-                <p>Lørdag</p>
-                <p>Søndag</p>
+                <p tabindex="0">Mandag</p>
+                <p tabindex="0">Tirsdag</p>
+                <p tabindex="0">Onsdag</p>
+                <p tabindex="0 ">Torsdag</p>
+                <p tabindex="0">Fredag</p>
+                <p tabindex="0">Lørdag</p>
+                <p tabindex="0">Søndag</p>
               </div>
               <div
                 class="tidspunkter grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
               >
-                <p>10 - 18</p>
-                <p>10 - 18</p>
-                <p>10 - 18</p>
-                <p>10 - 18</p>
-                <p>10 - 18</p>
-                <p>10 - 15</p>
-                <p>11 - 16</p>
+                <p tabindex="0">10 - 18</p>
+                <p tabindex="0">10 - 18</p>
+                <p tabindex="0">10 - 18</p>
+                <p tabindex="0">10 - 18</p>
+                <p tabindex="0">10 - 18</p>
+                <p tabindex="0">10 - 15</p>
+                <p tabindex="0">11 - 16</p>
               </div>
             </div>
           </section>
@@ -740,11 +755,14 @@
           <section
             class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
           >
-            <h4 class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop">
+            <h4
+              tabindex="0"
+              class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop"
+            >
               FØLG OS HER
             </h4>
             <div class="ikoner flex place-content-center gap-m-spacing-mobile">
-              <svg width="40" height="40" viewBox="0 0 48 48">
+              <svg tabindex="0" width="40" height="40" viewBox="0 0 48 48">
                 <g fill="none" fill-rule="evenodd" clip-rule="evenodd">
                   <path
                     stroke="#fffdf9"
@@ -759,7 +777,7 @@
                   ></path>
                 </g>
               </svg>
-              <svg width="44" height="44" viewBox="0 0 512 512">
+              <svg tabindex="0" width="44" height="44" viewBox="0 0 512 512">
                 <path
                   fill="#fffdf9"
                   d="M349.33 69.33a93.62 93.62 0 0 1 93.34 93.34v186.66a93.62 93.62 0 0 1-93.34 93.34H162.67a93.62 93.62 0 0 1-93.34-93.34V162.67a93.62 93.62 0 0 1 93.34-93.34h186.66m0-37.33H162.67C90.8 32 32 90.8 32 162.67v186.66C32 421.2 90.8 480 162.67 480h186.66C421.2 480 480 421.2 480 349.33V162.67C480 90.8 421.2 32 349.33 32Z"
@@ -776,10 +794,16 @@
         <section
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
         >
-          <p>CVR: 35649328</p>
-          <a class="cursor-pointer underline" href="#">Cookiepolitik</a>
-          <a class="cursor-pointer underline" href="#">Privatlivspolitik</a>
-          <a class="cursor-pointer underline" href="#">Handelsbetingelser</a>
+          <p tabindex="0">CVR: 35649328</p>
+          <a tabindex="0" class="cursor-pointer underline" href="#"
+            >Cookiepolitik</a
+          >
+          <a tabindex="0" class="cursor-pointer underline" href="#"
+            >Privatlivspolitik</a
+          >
+          <a tabindex="0" class="cursor-pointer underline" href="#"
+            >Handelsbetingelser</a
+          >
         </section>
       </article>
     </footer>
