--- a/src/footer.html
+++ b/src/footer.html
@@ -1,11 +1,18 @@
-<footer>
-  <article>
-    <div class="desktop">
-      <section class="butikker">
-        <h4>BUTIKKER</h4>
+<footer
+  tabindex="0"
+  class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
+>
+  <article
+    class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
+  >
+    <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
+      <section
+        class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+      >
+        <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">BUTIKKER</h4>
 
-        <div class="adresser">
-          <div class="strandvejen">
+        <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
+          <address tabindex="0" class="strandvejen">
             <p>Strandvejen 167</p>
             <p>2900 Hellerup</p>
             <p>Danmark</p>
@@ -13,65 +20,95 @@
               <a href="tel:+4539629059"></a>
               Tlf.: +45 39 62 90 59
             </p>
-          </div>
+          </address>
 
-          <div class="gunnar">
+          <address tabindex="0" class="gunnar">
             <p>Gunnar Nu Hansens Pl. 6</p>
             <p>2100 København Ø</p>
             <p>Danmark</p>
             <p><a href="tel:+4536260700"></a>Tlf.: +45 36 26 07 00</p>
-          </div>
+          </address>
 
-          <div class="vaernedamsvej">
+          <address tabindex="0" class="vaernedamsvej">
             <p>Værnedamsvej 4A st.</p>
             <p>1619 København V</p>
             <p>Danmark</p>
             <p><a href="tel:+4526117006"></a>Tlf.: +45 26 11 70 06</p>
+          </address>
+        </div>
+      </section>
+
+      <section
+        class="informationer flex flex-col gap-l-spacing-mobile pb-xxl-spacing-mobile lg:gap-0 lg:pb-0"
+      >
+        <h4
+          tabindex="0"
+          class="text-h4-mobile lg:pb-l-spacing-desktop lg:text-h4-desktop"
+        >
+          INFORMATIONER
+        </h4>
+        <div class="mx-auto">
+          <div class="text-start underline lg:pb-l-spacing-desktop">
+            <a tabindex="0" href="#">Om os</a>
+          </div>
+          <div class="text-start underline lg:pb-l-spacing-desktop">
+            <a tabindex="0" href="#">Kontakt os</a>
+          </div>
+          <div class="text-start underline lg:pb-l-spacing-desktop">
+            <a tabindex="0" href="sitemap.html">Sitemap</a>
           </div>
         </div>
       </section>
 
-      <section class="informationer">
-        <h4>INFORMATIONER</h4>
-        <div>
-          <a href="#">Om os</a>
-        </div>
-        <div>
-          <a href="#">Kontakt os</a>
-        </div>
-        <div>
-          <a href="#">Sitemap</a>
-        </div>
-      </section>
-
-      <section class="abningstider">
-        <h4>ÅBNINGSTIDER</h4>
-        <div class="tider">
-          <div class="dage">
-            <p>Mandag</p>
-            <p>Tirsdag</p>
-            <p>Onsdag</p>
-            <p>Torsdag</p>
-            <p>Fredag</p>
-            <p>Lørdag</p>
-            <p>Søndag</p>
+      <section
+        class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+      >
+        <h4 tabindex="0" class="text-h4-mobile lg:text-h4-desktop">
+          ÅBNINGSTIDER
+        </h4>
+        <div class="tider grid grid-cols-2">
+          <div
+            class="dage grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
+          >
+            <p tabindex="0">Mandag</p>
+            <p tabindex="0">Tirsdag</p>
+            <p tabindex="0">Onsdag</p>
+            <p tabindex="0 ">Torsdag</p>
+            <p tabindex="0">Fredag</p>
+            <p tabindex="0">Lørdag</p>
+            <p tabindex="0">Søndag</p>
           </div>
-          <div class="tidspunkter">
-            <p>10 - 18</p>
-            <p>10 - 18</p>
-            <p>10 - 18</p>
-            <p>10 - 18</p>
-            <p>10 - 18</p>
-            <p>10 - 15</p>
-            <p>11 - 16</p>
+          <div
+            class="tidspunkter grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
+          >
+            <p tabindex="0">10 - 18</p>
+            <p tabindex="0">10 - 18</p>
+            <p tabindex="0">10 - 18</p>
+            <p tabindex="0">10 - 18</p>
+            <p tabindex="0">10 - 18</p>
+            <p tabindex="0">10 - 15</p>
+            <p tabindex="0">11 - 16</p>
           </div>
         </div>
       </section>
 
-      <section class="folgosher">
-        <h4>FØLG OS HER</h4>
-        <div class="ikoner">
-          <svg width="40" height="40" viewBox="0 0 48 48">
+      <section
+        class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
+      >
+        <h4
+          tabindex="0"
+          class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop"
+        >
+          FØLG OS HER
+        </h4>
+        <div class="ikoner flex place-content-center gap-m-spacing-mobile">
+          <svg
+            tabindex="0"
+            width="40"
+            height="40"
+            viewBox="0 0 48 48"
+            alt="facebook"
+          >
             <g fill="none" fill-rule="evenodd" clip-rule="evenodd">
               <path
                 stroke="#fffdf9"
@@ -86,7 +123,13 @@
               ></path>
             </g>
           </svg>
-          <svg width="44" height="44" viewBox="0 0 512 512">
+          <svg
+            tabindex="0"
+            width="44"
+            height="44"
+            viewBox="0 0 512 512"
+            alt="instagram"
+          >
             <path
               fill="#fffdf9"
               d="M349.33 69.33a93.62 93.62 0 0 1 93.34 93.34v186.66a93.62 93.62 0 0 1-93.34 93.34H162.67a93.62 93.62 0 0 1-93.34-93.34V162.67a93.62 93.62 0 0 1 93.34-93.34h186.66m0-37.33H162.67C90.8 32 32 90.8 32 162.67v186.66C32 421.2 90.8 480 162.67 480h186.66C421.2 480 480 421.2 480 349.33V162.67C480 90.8 421.2 32 349.33 32Z"
@@ -100,11 +143,19 @@
       </section>
     </div>
 
-    <section class="nederst">
-      <p>CVR: 35649328</p>
-      <a href="#">Cookiepolitik</a>
-      <a href="#">Privatlivspolitik</a>
-      <a href="#">Handelsbetingelser</a>
+    <section
+      class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile lg:flex lg:place-content-center lg:gap-20"
+    >
+      <p tabindex="0">CVR: 35649328</p>
+      <a tabindex="0" class="cursor-pointer underline" href="#"
+        >Cookiepolitik</a
+      >
+      <a tabindex="0" class="cursor-pointer underline" href="#"
+        >Privatlivspolitik</a
+      >
+      <a tabindex="0" class="cursor-pointer underline" href="#"
+        >Handelsbetingelser</a
+      >
     </section>
   </article>
 </footer>
