--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -297,7 +297,7 @@
         <article
           class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
         >
-          <div class="full_bar">
+          <nav class="full_bar border-none">
             <div>
               <p class="overskrift -ml-6 text-rust-500 lg:-ml-11">Størrelse</p>
               <div class="bar1">
@@ -342,7 +342,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </nav>
         </article>
       </section>
       <!-- PROGRESS BAR SLUT -->
@@ -473,13 +473,12 @@
       <section
         class="flex place-content-center pb-xxl-spacing-mobile lg:pb-xxl-spacing-desktop"
       >
-        <a href="abonnement2.html"
-          ><button
-            class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
-          >
-            Næste trin
-          </button></a
+        <a
+          class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
+          href="abonnement2.html"
         >
+          Næste trin
+        </a>
       </section>
     </main>
 
