--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -313,33 +313,29 @@
             <div>
               <p class="overskrift -ml-1.5 text-rust-200 lg:-ml-2">Stil</p>
               <div class="bar2">
-                <a href="abonnement2.html"
-                  ><div class="ball2">
-                    <p>2</p>
-                  </div>
-                </a>
+                <div class="ball2">
+                  <p>2</p>
+                </div>
+
                 <div class="line2"></div>
               </div>
             </div>
             <div>
               <p class="overskrift -ml-2 text-rust-200 lg:-ml-5">Duft</p>
               <div class="bar3">
-                <a href="abonnement3.html"
-                  ><div class="ball3">
-                    <p>3</p>
-                  </div>
-                </a>
+                <div class="ball3">
+                  <p>3</p>
+                </div>
+
                 <div class="line3"></div>
               </div>
             </div>
             <div>
               <p class="overskrift -ml-6 text-rust-200 lg:-ml-14">Hyppighed</p>
               <div class="bar4">
-                <a href="abonnement4.html"
-                  ><div class="ball4">
-                    <p>4</p>
-                  </div>
-                </a>
+                <div class="ball4">
+                  <p>4</p>
+                </div>
               </div>
             </div>
           </nav>
