--- a/src/abonnement2.html
+++ b/src/abonnement2.html
@@ -332,22 +332,19 @@
             <div>
               <p class="overskrift -ml-2 text-rust-200 lg:-ml-5">Duft</p>
               <div class="bar3">
-                <a href="abonnement3.html"
-                  ><div class="ball3">
-                    <p>3</p>
-                  </div>
-                </a>
+                <div class="ball3">
+                  <p>3</p>
+                </div>
+
                 <div class="line3"></div>
               </div>
             </div>
             <div>
               <p class="overskrift -ml-6 text-rust-200 lg:-ml-14">Hyppighed</p>
               <div class="bar4">
-                <a href="abonnement4.html"
-                  ><div class="ball4">
-                    <p>4</p>
-                  </div>
-                </a>
+                <div class="ball4">
+                  <p>4</p>
+                </div>
               </div>
             </div>
           </div>
@@ -394,7 +391,7 @@
                 class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
               >
                 <div class="info justify-between text-center">
-                  <p class="">Farverig</p>
+                  <h3 class="">Farverig</h3>
                 </div>
               </div>
             </article>
@@ -414,7 +411,7 @@
                 class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
               >
                 <div class="info justify-between text-center">
-                  <p>Neutral</p>
+                  <h3>Neutral</h3>
                 </div>
               </div>
             </article>
@@ -423,9 +420,9 @@
 
         <div class="lg:grid">
           <div class="flex gap-xxxs-spacing-mobile">
-            <h3 class="pb-s-spacing-mobile font-other-headings text-h5-mobile">
+            <h2 class="pb-s-spacing-mobile font-other-headings text-h5-mobile">
               Vælg tæthed
-            </h3>
+            </h2>
 
             <div class="dropdown">
               <label tabindex="0">
@@ -466,7 +463,7 @@
                 class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
               >
                 <div class="info justify-between text-center">
-                  <p>Tæt</p>
+                  <h3>Tæt</h3>
                 </div>
               </div>
             </article>
@@ -486,7 +483,7 @@
                 class="info_wrapper border-t-2 border-color-black bg-rust-100 p-6 font-font-body text-abonnement-text-info lg:text-h4-desktop"
               >
                 <div class="info justify-between text-center">
-                  <p class="">Luftig</p>
+                  <h3>Luftig</h3>
                 </div>
               </div>
             </article>
@@ -497,13 +494,12 @@
       <section
         class="flex place-content-center pb-xxl-spacing-mobile lg:pb-xxl-spacing-desktop"
       >
-        <a href="abonnement3.html"
-          ><button
-            class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
-          >
-            Næste trin
-          </button></a
+        <a
+          class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
+          href="abonnement3.html"
         >
+          Næste trin
+        </a>
       </section>
     </main>
 
